<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context="com.example.syanaz.syanaztasia_1202152327_modul2.DetailMenu">

    <ImageView
        android:id="@+id/menu_Gambar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/bibimbap"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/menu_Nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bibimbap"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
      android:id="@+id/menu_Harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rp_30000"
        android:textSize="22sp"
        android:textStyle="normal"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/menu_Deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bahan"
        android:textSize="16sp"
        android:textStyle="normal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
</LinearLayout>