<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.syanaz.syanaztasia_1202152327_modul2.MainActivity">

    <ImageView
        android:id="@+id/img_resto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pilih_menu"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/pilih_menu"
        android:layout_marginBottom="345dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/resto" />
    <TextView
        android:id="@+id/pilih_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_makan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="6dp"
        android:textSize="18sp"
        android:gravity="center"

        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pilih_menu"
        android:id="@+id/radioGroup"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/dineIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makan_ditempat"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/takeAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makan_dibawa"
            android:checked="true"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/pesan_sekarang"
        android:layout_margin="90dp"
       android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:onClick="onRadioButtonClicked"/>

</RelativeLayout>
